agrega restriccion para caracteres y letras

--- a/client/views/components/movement-form.html
+++ b/client/views/components/movement-form.html
@@ -63,6 +63,8 @@
                 step="0.01"
                 placeholder=""
                 required
+                onkeypress='return event.charCode >= 48 && event.charCode <= 57'
+                min=0
                 value="{{ movement.amount if movement.amount }}"
             />
         </div>
