--- a/client/views/expense.html
+++ b/client/views/expense.html
@@ -14,6 +14,10 @@
                     <p class="card-header-title" data-ref="formTitle">
                         Nuevo egreso
                     </p>
+                    <div href="#" class="btn-flotante">
+                        <p class="muestra">info</p>
+                        <p class="oculta">Todos los campos deben ser completados</p>
+                    </div>
                 </div>
 
                 <div class="card-content" data-ref="form">
