--- a/client/views/home.html
+++ b/client/views/home.html
@@ -9,8 +9,14 @@
         <div class="column">
             <div class="card">
                 <div class="card-header" id="div-titulo1">
-                    <h2 class="card-header-title" id="titulo1">Gastos mensuales</h2>
+                    <h2 class="card-header-title" id="titulo1">Gastos mensuales</h2>                   
+                    
+                    <div href="#" class="btn-flotante">
+                        <p class="muestra">info</p>
+                        <p class="oculta">Muestra los gastos del mes</p>
+                    </div>                               
                 </div>
+                
                 <div class="card-content">
                     <div style="width: 100%; height: 320px">
                         <canvas data-ref="monthExpenses"></canvas>
@@ -19,6 +25,7 @@
             </div>
         </div>
     </div>
+    
 
         <div class="column">
             <div class="card" data-testid="last-movements">
@@ -36,6 +43,10 @@
             <div class="card">
                 <div class="card-header" id="div-titulo3">
                     <h2 class="card-header-title" id="titulo3">Balance mensual</h2>
+                    <div href="#" class="btn-flotante">
+                        <p class="muestra">info</p>
+                        <p class="oculta">Muestra el balance por mes</p>
+                    </div>
                 </div>
                 <div class="card-content">
                     <div style="width: 100%; height: 300px">
