--- a/client/views/_base.html
+++ b/client/views/_base.html
@@ -1,68 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <title>{% block title %} Gitapp {% endblock %}</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link
-            rel="stylesheet"
-            href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css"
-        />
-        <script>
-            function calcVH() {
-                document
-                    .querySelector(':root')
-                    .style.setProperty('--vh', window.innerHeight / 100 + 'px');
-            }
-            window.addEventListener('resize', calcVH);
-            calcVH();
-        </script>
-        <link rel="stylesheet" href="/css/main.css" />
-    </head>
-    <body class="app">
-        <nav class="header">
-            <img src="/assets/logo.svg" alt="logo" width="40" height="40" />
-            <span class="ml-2 is-size-4">Gitapp</span>
-        </nav>
 
-        <nav class="aside">
-            <a
-                href="/"
-                class="aside-item {{ 'is-active' if activeLink === 'home' }}"
-            >
-                <img src="/assets/home.svg" alt="home logo" />
-                <span class="aside-item-text">Resumen</span>
-            </a>
+<head>
+    <meta charset="UTF-8" />
+    <title>{% block title %} Gitapp {% endblock %}</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css" />
+    <script>
+        function calcVH() {
+            document
+                .querySelector(':root')
+                .style.setProperty('--vh', window.innerHeight / 100 + 'px');
+        }
+        window.addEventListener('resize', calcVH);
+        calcVH();
 
-            <a
-                href="/income"
-                class="aside-item {{ 'is-active' if activeLink === 'income' }}"
-            >
-                <img src="/assets/income.svg" alt="income logo" />
-                <span class="aside-item-text">Ingresos</span>
-            </a>
+    </script>
+    <link rel="stylesheet" href="/css/main.css" />
+</head>
 
-            <a
-                href="/expense"
-                class="aside-item {{ 'is-active' if activeLink === 'expense' }}"
-            >
-                <img src="/assets/expense.svg" alt="expense logo" />
-                <span class="aside-item-text">Egresos</span>
-            </a>
+<body class="app">
+    <nav class="header">
+        <img src="/assets/logo.svg" alt="logo" width="40" height="40" />
+        <span class="ml-2 is-size-4">Gitapp</span>
+    </nav>
 
-            <a
-                href="/about"
-                class="aside-item about {{ 'is-active' if activeLink === 'about' }}"
-            >
-                <img src="/img/about.png" alt="About logo" />
-                <span class="aside-item-text">Nosotros</span>
-            </a>
+    <nav class="aside">
+        <!-- Button trigger modal -->
+        <button type="button" id="button-modal" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            Acerca de Gitapp
+        </button>
+        <a href="/" class="aside-item {{ 'is-active' if activeLink === 'home' }}">
+            <img src="/assets/home.svg" alt="home logo" />
+            <!-- Modal -->
+            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                aria-hidden="false">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h1 class="modal-title bienvenido" id="exampleModalLabel">¡BIENVENIDO A GITAPP!</h1>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            En esta aplicacion podrás cargas tus ingresos y egresos del dia a dia <br>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" id="cerrar" class="btn btn-primary" data-bs-dismiss="modal">Cerrar</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <span class="aside-item-text">Resumen</span>
+        </a>
 
-        </nav>
+        <a href="/income" class="aside-item {{ 'is-active' if activeLink === 'income' }}">
+            <img src="/assets/income.svg" alt="income logo" />
+            <span class="aside-item-text">Ingresos</span>
+        </a>
 
-        <main class="main px-4 mt-4">{% block main %} {% endblock %}</main>
+        <a href="/expense" class="aside-item {{ 'is-active' if activeLink === 'expense' }}">
+            <img src="/assets/expense.svg" alt="expense logo" />
+            <span class="aside-item-text">Egresos</span>
+        </a>
 
-        {% block js %} {% endblock %}
-        <script src="https://mozilla.github.io/nunjucks/files/nunjucks-slim.min.js"></script>
-    </body>
+        <a href="/about" class="aside-item about {{ 'is-active' if activeLink === 'about' }}">
+            <img src="/img/about.png" alt="About logo" />
+            <span class="aside-item-text">Nosotros</span>
+        </a>
+
+    </nav>
+
+    <main class="main px-4 mt-4">{% block main %} {% endblock %}</main>
+
+    {% block js %} {% endblock %}
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous">
+    </script>
+    <script src="https://mozilla.github.io/nunjucks/files/nunjucks-slim.min.js"></script>
+
+</body>
+
 </html>
