Modifica ubicacion de Nosotros

--- a/client/views/about.html
+++ b/client/views/about.html
@@ -26,7 +26,7 @@
                 </li>
             </ul>
         </div>
-        <img src="/img/github.png" alt="Logo Github" width="4%" height="4%">
+        <img src="/img/github.png" alt="Logo Github" width="4%" height="4%" style="display: block; margin:auto;">
         <div>
             <a class="repo" href="https://github.com/Sol99/gitapp" target="_blank">
                 Link: Repositorio de github grupo 8
