Añade la funcion de boton al logo

--- a/client/views/_base.html
+++ b/client/views/_base.html
@@ -23,8 +23,8 @@
 
 <body class="app">
     <nav class="header">
-        <img src="/assets/logo.svg" alt="logo" width="40" height="40" />
-        <span class="ml-2 is-size-4">Gitapp</span>
+        <a href="/" id="boton-inicio" style="color:#020000"><img src="/assets/logo.svg" alt="logo" width="40" height="40"/>
+        <span class="ml-2 is-size-4">Gitapp</span></a>
     </nav>
 
     <nav class="aside">
