--- a/client/views/home.html
+++ b/client/views/home.html
@@ -4,7 +4,7 @@
 {% extends "_base.html" %}
 
 {% block main %}
-<div class="container">
+<div class="container" id="resumen">
     <div class="columns">
         <div class="column">
             <div class="card">
